tests/string.out
str "foo
    ^ Parse error.
str foo"
       ^ Parse error.
str foo bar
        ^ Unexpected text.
