tests/string.cli
str "foo bar baz"
str foo
str "foo
str foo"
str "foo \" bar"
str foo bar
